# OpenAI-Based-Agent

./: .gitignore  README.md  TODO.md  agent_package_summary.md  main.py  pyproject.toml  runner_agent_report.md
src/: cli.py
src/tools/: __init__.py  bash_tool.py  edit_file_tool.py  read_file_tool.py  search_tool.py  think.py  todo_list.py  write_file_tool.py
src/tools/sub_agents/: __init__.py  explore_agent.py
