[project]
name = "openai-based-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "colorama>=0.4.6",
    "openai-agents>=0.6.3",
]

[project.scripts]
openai-based-agent = "cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["cli"]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.data-files]
"" = ["src/system_prompt.md"]
